2006-08-31  Nathaniel Smith  <njs@pobox.com>

	* charset.cc (system_charset_is_ascii_extension_impl): Add "646".

2006-08-31  Nathaniel Smith  <njs@pobox.com>

	* work.cc (update_any_attrs): Remove stale comment.

2006-08-30  Zack Weinberg  <zackw@panix.com>

	* restrictions.hh (class restriction): Remove 'app' member.
	Remove app_state arguments from both constructors.
	(class node_restriction): Remove app_state argument from
	the constructor that doesn't take any file_path vectors.
	(class path_restriction): Likewise.
	* restrictions.cc: Update to match.  In constructors that do take
	file_path vectors, pass the app_state argument directly to
	validate_roster_paths and/or validate_workspace_paths.
	(test_empty_restriction): Construct empty restrictions without an
	app_state object.
	* automate.cc, cmd_diff_log.cc, roster.cc: Construct empty
	restrictions without an app_state object.

2006-08-30  Nathaniel Smith  <njs@pobox.com>

	* restrictions.{hh,cc}: Don't use app.depth directly -- take depth
	as a constructor argument.  Now uninitialized masks _do_ always
	include everything, as some code expected...
	* cmd_ws_commit.cc, cmd_merging.cc, cmd_list.cc, cmd_diff_log.cc:
	Adjust calling conventions accordingly.

2006-08-30  Zack Weinberg  <zackw@panix.com>

	* unit_tests.cc (localize_monotone): Define as a stub so the
	unit_tests binary will link.

2006-08-29  Richard Levitte  <richard@levitte.org>

	* automate.cc (AUTOMATE(get_option)): And I did the error
	report wrong as well...

2006-08-29  Richard Levitte  <richard@levitte.org>

	* automate.cc (AUTOMATE(get_option)): I did the output
	incorrectly to `std::cout' instead of the `output' stream.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* cmd.hh (ALIAS): Rework so gettext() can do its job properly,
	and get the alias description string translated as well.
	* po/sv.po: Translate the alias description string.

2006-08-28  Richard Levitte  <richard@levitte.org>
