@@ -2215,6 +2215,21 @@ database::get_revision_certs(revision_id const & id,
 }
 
 void
+database::get_revisions_with_cert(cert_name const & name,
+                                  base64<cert_value> const & val,
+                                  set<revision_id> & revisions)
+{
+  revisions.clear();
+  results res;
+  query q("SELECT id FROM revision_certs WHERE name = ? AND value = ?");
+  cert_value binvalue;
+  decode_base64(val, binvalue);
+  fetch(res, one_col, any_rows, q % text(name()) % blob(binvalue()));
+  for (results::const_iterator i = res.begin(); i != res.end(); ++i)
+    revisions.insert(revision_id((*i)[0]));
+}
+
+void
 database::get_revision_certs(cert_name const & name,
                              base64<cert_value> const & val,
                              vector< revision<cert> > & ts)
