@@ -1,3 +1,15 @@
+2006-09-04  Nathaniel Smith  <njs@pobox.com>
+
+	* revision.cc (erase_ancestors_and_failures): New erase_ancestors
+	core algorithm, with linear memory usage and that simultaneously
+	filters the candidate set with an arbitrary predicate.
+	(erase_ancestors): Turn into a thin layer over the above.
+	* database.cc (get_revision_certs): Add a quick way to get all
+	revisions that might be in a given branch.
+	* cert.cc (get_branch_heads): Use the above to make branch head
+	calculation take O(n) memory, and roughly O(log n) trust
+	evaluations.
+
 2006-08-31  Nathaniel Smith  <njs@pobox.com>
 
 	* charset.cc (system_charset_is_ascii_extension_impl): Add "646".
